# intellij-pest

./: .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml  release.yml
buildSrc/: build.gradle.kts
buildSrc/src/: tasks.kt
gradle/: deps.properties
gradle/wrapper/: gradle-wrapper.properties
grammar/: pest.bnf  pest.flex
res/colorSchemes/: Pest.xml  Pest_dark.xml
res/fileTemplates/: Pest File.pest.ft
res/inspectionDescriptions/: PestDuplicateRule.html
res/liveTemplates/: Pest.xml
res/rs/pest/: pest-bundle.properties
rust/: .gitignore  Cargo.toml  README.md
rust/.cargo/: config.toml
rust/src/: lib.rs  misc.rs  str4j.rs
src/icons/: PestIcons.java
src/rs/pest/: PestLanguage.java  pest-constants.kt  pest-highlight.kt  pest-infos.kt  pest-parser-def.kt
src/rs/pest/action/: create-file.kt  inline.kt  introduce.kt  tools.kt
src/rs/pest/editing/: pest-annotator.kt  pest-completion.kt  pest-editing.kt  pest-gutter.kt  pest-inspection.kt  pest-live-templates.kt  pest-structure.kt
src/rs/pest/error/: error-report.kt  report-bundle.properties
src/rs/pest/format/: block.kt  model.kt
test/: parsing-test.kt
test/rs/pest/: generation.kt  parsing-test.kt  rust-interaction-test.kt
testData/parse/: Builtins.pest  Builtins.txt  Char.pest  Char.txt  Issue25.pest  Issue25.txt  Issue41.pest  Issue41.txt  NestedComment.pest  NestedComment.txt  Paren.pest  Paren.txt  SimpleRule.pest  SimpleRule.txt
testData/rust/: External.rs  External.txt  Inline.rs  Inline.txt
(+23 files in other folders)
