[package]
name = "pest-ide"
version = "0.1.0"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
license = "Apache-2.0"
description = "Helper library for the IntelliJ IDEA plugin for Pest."
categories = ["development-tools"]
repository = "https://github.com/pest-parser/intellij-pest/tree/master/rust"
edition = "2018"

[badges]
appveyor = { repository = "pest-parser/intellij-pest", service = "github" }
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib"]

[dependencies]
pest = "2.1.1"
pest_meta = "2.1.1"
pest_vm = "2.1"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
