[package]
name = "pest-ide"
version = "0.1.4"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
license = "Apache-2.0"
description = "Helper library for the IntelliJ IDEA plugin for Pest."
categories = ["development-tools"]
keywords = ["pest", "grammar", "ide"]
repository = "https://github.com/pest-parser/intellij-pest/tree/master/rust"
homepage = "https://pest-parser.github.io/"
edition = "2018"
readme = "README.md"

[badges]
appveyor = { repository = "pest-parser/intellij-pest", service = "github" }
travis-ci = { repository = "pest-parser/intellij-pest" }
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib"]

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
pest = "2.1"
pest_meta = "2.1"
pest_vm = "2.1"

[profile.release]
lto = true
panic = 'abort'
opt-level = 'z'
codegen-units = 1
